--- a/themes/next/source/css/_common/components/post/post-reward.styl
+++ b/themes/next/source/css/_common/components/post/post-reward.styl
@@ -39,6 +39,8 @@
     display: inline-block;
     margin: 0.8em 2em 0 2em;
 }
+
+/ * 注释：去掉打赏闪动
 #wechat:hover p{
     animation: roll 0.1s infinite linear;
     -webkit-animation: roll 0.1s infinite linear;
@@ -54,6 +56,9 @@
     -webkit-animation: roll 0.1s infinite linear;
     -moz-animation: roll 0.1s infinite linear;
 }
+* /
+
+
 @keyframes roll {
     from {
       transform(rotateZ(30deg));
